--- a/index.html
+++ b/index.html
@@ -4,23 +4,33 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <title>The Wintersmith's blog
+    <title>Raibima's Blog
     </title>
-    <link rel="alternate" href="http://localhost:8080/feed.xml" type="application/rss+xml" title="Ramblings of an immor(t)al demigod">
+    <link rel="alternate" href="http://coderay1100.github.io/blog/feed.xml" type="application/rss+xml" title="My daily tips &amp; tricks on web development">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
     <header class="header">
       <div class="content-wrap">
         <div class="logo">
-          <h1><a href="http://localhost:8080">The Wintersmith's blog</a></h1>
-          <p class="description">Ramblings of an immor(t)al demigod</p>
+          <h1><a href="http://coderay1100.github.io/blog">Raibima's Blog</a></h1>
+          <p class="description">My daily tips &amp; tricks on web development</p>
         </div>
       </div>
     </header>
     <div id="content">
       <div class="content-wrap">
+        <article class="article intro">
+          <header>
+            <p class="date"><span>25. May 2014</span></p>
+            <h2><a href="/articles/tutorial-git/">Tutorial Git Untuk Pemula (Indonesia)</a></h2>
+          </header>
+          <section class="content"><p>Halo! Di blog post pertama saya ini, saya akan coba jelaskan sedikit mengenai <em>Git</em> Version Control System&nbsp;(<span class="caps">VCS</span>).</p>
+
+            <p class="more"><a href="/articles/tutorial-git/">more</a></p>
+          </section>
+        </article>
         <article class="article intro">
           <header>
             <p class="date"><span>30. April 2013</span></p>
@@ -31,33 +41,11 @@
             <p class="more"><a href="/articles/hello-world/">more</a></p>
           </section>
         </article>
-        <article class="article intro">
-          <header>
-            <p class="date"><span>01. April 2013</span></p>
-            <h2><a href="/articles/red-herring/">A red herring</a></h2>
-          </header>
-          <section class="content"><p>A long time ago, when the world was young — someone put some food on their tongue.
-They tasted the food, and thought it was nice. Most fruit liked it — but banana’s thought&nbsp;twice.</p>
-<p>
-            <p class="more"><a href="/articles/red-herring/">more</a></p>
-          </section>
-        </article>
-        <article class="article intro">
-          <header>
-            <p class="date"><span>01. October 2012</span></p>
-            <h2><a href="/articles/another-test/">Code and stuff!</a></h2>
-          </header>
-          <section class="content"><p>Syntax highlighting with <a href="http://softwaremaniacs.org/soft/highlight/en/">highlight.js</a>.
-The theme used is tomorrow, you can find more themes <a href="http://jmblog.github.io/color-themes-for-highlightjs/">here</a>.</p>
-<p>
-            <p class="more"><a href="/articles/another-test/">more</a></p>
-          </section>
-        </article>
       </div>
     </div>
     <footer>
       <div class="content-wrap">
-        <div class="nav"><a href="/archive.html">« Archives</a><a href="/page/2/">Next page »</a>
+        <div class="nav"><a href="/archive.html">« Archives</a>
         </div>
         <section class="about"><p>Wintersmith is made by <a href="http://johan-nordberg.com/">Johan Nordberg</a> and licensed under the <a href="http://opensource.org/licenses/MIT">MIT-license</a>.
 This footer text can be edited in about.md</p>
@@ -72,7 +60,7 @@ deserunt mollit anim id est laborum.</p>
 
         </section>
         <section class="copy">
-          <p>&copy; 2014 Someone &mdash; powered by&nbsp;<a href="https://github.com/jnordberg/wintersmith">Wintersmith</a>
+          <p>&copy; 2014 Raibima Putra &mdash; powered by&nbsp;<a href="https://github.com/jnordberg/wintersmith">Wintersmith</a>
           </p>
         </section>
       </div>
