--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </title>
     <link rel="alternate" href="http://coderay1100.github.io/blog/feed.xml" type="application/rss+xml" title="My daily tips &amp; tricks on web development">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
     <header class="header">
@@ -24,28 +24,28 @@
         <article class="article intro">
           <header>
             <p class="date"><span>25. May 2014</span></p>
-            <h2><a href="/articles/tutorial-git/">Tutorial Git Untuk Pemula (Indonesia)</a></h2>
+            <h2><a href="./articles/tutorial-git/">Tutorial Git Untuk Pemula (Indonesia)</a></h2>
           </header>
           <section class="content"><p>Halo! Di blog post pertama saya ini, saya akan coba jelaskan sedikit mengenai <em>Git</em> Version Control System&nbsp;(<span class="caps">VCS</span>).</p>
 
-            <p class="more"><a href="/articles/tutorial-git/">more</a></p>
+            <p class="more"><a href="./articles/tutorial-git/">more</a></p>
           </section>
         </article>
         <article class="article intro">
           <header>
             <p class="date"><span>30. April 2013</span></p>
-            <h2><a href="/articles/hello-world/">README</a></h2>
+            <h2><a href="./articles/hello-world/">README</a></h2>
           </header>
           <section class="content"><p>Welcome to your new blog! This is the default blog template with <span class="caps">RSS</span>, pagination and an archive. There are other templates available — run <code>wintersmith new --help</code> to list&nbsp;them.</p>
 
-            <p class="more"><a href="/articles/hello-world/">more</a></p>
+            <p class="more"><a href="./articles/hello-world/">more</a></p>
           </section>
         </article>
       </div>
     </div>
     <footer>
       <div class="content-wrap">
-        <div class="nav"><a href="/archive.html">« Archives</a>
+        <div class="nav"><a href="./archive.html">« Archives</a>
         </div>
         <section class="about"><p>Wintersmith is made by <a href="http://johan-nordberg.com/">Johan Nordberg</a> and licensed under the <a href="http://opensource.org/licenses/MIT">MIT-license</a>.
 This footer text can be edited in about.md</p>
