--- a/archive.html
+++ b/archive.html
@@ -8,7 +8,7 @@
     </title>
     <link rel="alternate" href="http://coderay1100.github.io/blog/feed.xml" type="application/rss+xml" title="My daily tips &amp; tricks on web development">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
     <header class="header">
