--- a/archive.html
+++ b/archive.html
@@ -8,7 +8,7 @@
     </title>
     <link rel="alternate" href="http://coderay1100.github.io/blog/feed.xml" type="application/rss+xml" title="My daily tips &amp; tricks on web development">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Anonymous+Pro:400,700,400italic,700italic|Merriweather:400,700,300">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="http://coderay1100.github.io/blog/css/main.css">
   </head>
   <body>
     <header class="header">
@@ -28,7 +28,7 @@
               <ul style="margin-left:4em">
                 <li><span style="line-height:2.2em" class="month-label">May</span>
                   <ul style="margin-left:7em">
-                    <li style="height:2.2em;line-height:2.2em;"><a href="/articles/tutorial-git/">Tutorial Git Untuk Pemula (Indonesia)</a></li>
+                    <li style="height:2.2em;line-height:2.2em;"><a href="http://coderay1100.github.io/blog/articles/tutorial-git/">Tutorial Git Untuk Pemula (Indonesia)</a></li>
                   </ul>
                 </li>
               </ul>
@@ -37,7 +37,7 @@
               <ul style="margin-left:4em">
                 <li><span style="line-height:2.2em" class="month-label">April</span>
                   <ul style="margin-left:7em">
-                    <li style="height:2.2em;line-height:2.2em;"><a href="/articles/hello-world/">README</a></li>
+                    <li style="height:2.2em;line-height:2.2em;"><a href="http://coderay1100.github.io/blog/articles/hello-world/">README</a></li>
                   </ul>
                 </li>
               </ul>
